feat: add screenshot for Video Store Management project in portfolio

--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -189,9 +189,11 @@ const t = useTranslations('en');
 						</div>
 					</div>
 					<div class="project-image">
-						<div class="placeholder-project">
-							<span>Project Image</span>
-						</div>
+						<img 
+							src="/images/projects/video-store-screenshot.png" 
+							alt="Video Store Management System Screenshot"
+							loading="lazy"
+						/>
 					</div>
 				</div>
 			</div>
