--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -458,12 +458,12 @@ const t = useTranslations('en');
 	}
 
 	.job-card:nth-child(even) .job-content {
-		grid-column: 4 / -1;
+		grid-column: 3 / -1;
 		text-align: right;
 	}
 
 	.job-card:nth-child(even) .job-highlight {
-		grid-column: 1 / 3;
+		grid-column: 1 / 2;
 	}
 
 	.job-card:nth-child(even) .job-technologies {
@@ -472,7 +472,7 @@ const t = useTranslations('en');
 
 	.job-content {
 		position: relative;
-		grid-area: 1 / 1 / -1 / 10;
+		grid-area: 1 / 1 / -1 / 11;
 	}
 
 	.job-content h3 {
@@ -504,9 +504,9 @@ const t = useTranslations('en');
 	.job-responsibilities {
 		background-color: #112240;
 		box-shadow: 0 10px 30px -15px rgba(2, 12, 27, 0.7);
-		padding: 25px;
-		border-radius: 4px;
-		margin: 20px 0;
+		padding: 35px 30px;
+		border-radius: 6px;
+		margin: 25px 0;
 		list-style: none;
 		position: relative;
 		z-index: 2;
@@ -515,10 +515,14 @@ const t = useTranslations('en');
 	.job-responsibilities li {
 		position: relative;
 		padding-left: 30px;
-		margin-bottom: 10px;
+		margin-bottom: 12px;
 		color: #8892b0;
-		font-size: 16px;
-		line-height: 1.4;
+		font-size: 17px;
+		line-height: 1.5;
+	}
+
+	.job-responsibilities li:last-child {
+		margin-bottom: 0;
 	}
 
 	.job-responsibilities li::before {
@@ -556,7 +560,7 @@ const t = useTranslations('en');
 	}
 
 	.job-highlight {
-		grid-area: 1 / 11 / -1 / -1;
+		grid-area: 1 / 12 / -1 / -1;
 		position: relative;
 		display: flex;
 		align-items: center;
