--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -77,9 +77,11 @@ const t = useTranslations('en');
 				</div>
 				<div class="about-image">
 					<div class="image-wrapper">
-						<div class="placeholder-image">
-							<span>Profile Photo</span>
-						</div>
+						<img 
+							src="/images/profile/profile-picture.jpg" 
+							alt="Antonio Ramos - Software Architect"
+							loading="lazy"
+						/>
 					</div>
 				</div>
 			</div>
@@ -429,7 +431,23 @@ const t = useTranslations('en');
 		position: relative;
 		width: 100%;
 		border-radius: 4px;
-		background-color: #64ffda;
+	}
+
+	.image-wrapper img {
+		position: relative;
+		border-radius: 4px;
+		width: 100%;
+		height: auto;
+		max-height: 400px;
+		object-fit: contain;
+		filter: grayscale(100%) contrast(1) brightness(90%);
+		mix-blend-mode: multiply;
+		transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+	}
+
+	.about-image:hover .image-wrapper img {
+		filter: none;
+		mix-blend-mode: normal;
 	}
 
 	.placeholder-image {
