--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -78,7 +78,7 @@ const t = useTranslations('en');
 				<div class="about-image">
 					<div class="image-wrapper animate-profile">
 						<img 
-							src="/images/profile/profile-picture.jpg" 
+							src={`${import.meta.env.BASE_URL}images/profile/profile-picture.jpg`}
 							alt="Antonio Ramos - Software Architect"
 							loading="lazy"
 						/>
@@ -158,7 +158,7 @@ const t = useTranslations('en');
 					</div>
 					<div class="project-image">
 						<img 
-							src="/images/projects/portfolio-screenshot.png" 
+							src={`${import.meta.env.BASE_URL}images/projects/portfolio-screenshot.png`}
 							alt="Personal Portfolio Screenshot"
 							loading="lazy"
 						/>
@@ -192,7 +192,7 @@ const t = useTranslations('en');
 					</div>
 					<div class="project-image">
 						<img 
-							src="/images/projects/video-store-screenshot.png" 
+							src={`${import.meta.env.BASE_URL}images/projects/video-store-screenshot.png`}
 							alt="Video Store Management System Screenshot"
 							loading="lazy"
 						/>
